2011-08-05  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the request handlers to use edismax
	* Changed the schema.xml files to use relative paths in xIncludes (supported since Apache Solr 3.1)
	* Fixed solrconfig.xml, using response writers from org.apache.solr.response instead of org.apache.solr.request
	* Added explicit luceneMatchVersion specification to solrconfig.xml

2011-08-03  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Removed the singlecore configuration for Solr
	* !!! Moved Solr multicore configuration up one level, making it the default

	* Changed the install script to set up Apache Solr 3.3 with a multicore setup by default

	* Changed solr.xml to only one core (english)
	* Added ElisionFilterFactory infrench schema.xml
	* Fixed encoding of french stopwords.txt
	* Added StempelPolishStemFilterFactory stemmer in polish schema.xml
	* Fixed typo in polish schema.xml
	* Fixed encoding of spanish stopwords.txt
	* Changed solrconfig.xml to include libraries necessary to analyze some languages, including Chinese and Polish (affects Solr 3.1+ only)

2011-07-11  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #27987: Add download link to access filter check report
	* Added support for Index Queue access restriction from custom records

2011-07-07  Ingo Renner  <ingo.renner@dkd.de>

	* Changed Solr TYPO3 Plugin required version to 1.2.0

2011-07-06  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 2.0.0-dev

	* Added Garbage Collection
	* Added Index Queue
	* Added a basic backend module


	* !!! Changed tx_solr_Query::setSorting() to accept (require) the sorting string parameter to set the query's sort parameter

	* Added support for Record Access Rootline Elements
	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
	* Added new marker ###FACET_LINK.FACET_NAME###
	* Fixed usage of extension key in DevLog calls
	* Moved method getSearch() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase