@@ -4,6 +4,7 @@
 	* Changed the schema.xml files to use relative paths in xIncludes (supported since Apache Solr 3.1)
 	* Fixed solrconfig.xml, using response writers from org.apache.solr.response instead of org.apache.solr.request
 	* Added explicit luceneMatchVersion specification to solrconfig.xml
+	* Changed solrconfig.xml highlighting configuration to match Solr 3.x
 
 2011-08-03  Ingo Renner  <ingo.renner@dkd.de>
 
